--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "*",
-    "@mate-academy/scripts": "^1.2.11",
+    "@mate-academy/scripts": "^1.9.12",
     "@mate-academy/stylelint-config": "*",
     "@parcel/core": "^2.10.3",
     "@parcel/transformer-sass": "^2.10.2",
     "backstopjs": "^6.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
